exports[`comp should allow removing props from output components to avoid warnings 1`] = `
<div
  className="cxsync-1950064219" />
`;

exports[`comp should remove props even when they come from a native component 1`] = `
Object {
  "className": "cxsync-3634499107",
  "styles": Object {
    "backgroundColor": "white",
  },
}
`;

exports[`comp should remove props even when they come from a native component 2`] = `
<div
  className="cxsync-146553031" />
`;
